tests/NormalTests/paczka1/small_fuzzy/21665466.err
Error in line 12: A208 S7o2 75,7
Error in line 10: A208 A649 97,9
